--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, labore. Blanditiis laboriosam sint dolores distinctio ipsum at quae aut quasi fuga eius quia minima iusto labore ad, in explicabo ut!</p></div>
         <div class="item">
             <h2 id="h2pers">BAND</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, pariatur itaque? Maiores, repellendus possimus! Omnis, velit fugit possimus quidem similique qui, explicabo in consequatur dolorum dolorem facilis architecto autem. Pariatur!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, pariatur itaque? Maiores, repellendus possimus! Omnis, velit fugit possimus quidem similique qui, explicabo in consequatur dolorum dolorem</p>
         </div>
     </div>
     
